--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "arondeparon/laravel-request-sanitizer": "^1.1",
         "fideloper/proxy": "^4.0",
+        "hesto/multi-auth": "^2.0",
         "kris/laravel-form-builder": "^1.20",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0"
