--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "arondeparon/laravel-request-sanitizer": "^1.1",
         "fideloper/proxy": "^4.0",
         "hesto/multi-auth": "^2.0",
+        "hyn/multi-tenant": "^5.4",
         "kris/laravel-form-builder": "^1.20",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0"
