--- a/.env.example
+++ b/.env.example
@@ -6,12 +6,12 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=atomsit
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=system
+TENANCY_HOST=127.0.0.1
+TENANCY_PORT=3306
+TENANCY_DATABASE=homestead
+TENANCY_USERNAME=homestead
+TENANCY_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
