--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+LIMIT_UUID_LENGTH_32=true
+NOCAPTCHA_SITEKEY=YOUR_API_SITE_KEY
+NOCAPTCHA_SECRET=YOUR_API_SECRET_KEY
