--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "fideloper/proxy": "^4.0",
     "hesto/multi-auth": "^2.0",
     "hyn/multi-tenant": "^5.4",
+    "igaster/laravel-theme": "^2.0",
     "kris/laravel-form-builder": "^1.20",
     "laravel/framework": "5.8.*",
     "laravel/tinker": "^1.0"
