--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,10 @@
   "require": {
     "php": "^7.1.3",
     "arondeparon/laravel-request-sanitizer": "^1.1",
+    "arrilot/laravel-widgets": "^3.13",
     "awobaz/eloquent-mutators": "^1.0",
     "chelebi/laravel-fqdn-validator": "^1.0",
+    "consoletvs/invoices": "^1.2",
     "fideloper/proxy": "^4.0",
     "hesto/multi-auth": "^2.0",
     "hyn/multi-tenant": "^5.4",
@@ -20,7 +22,7 @@
     "laravel/framework": "5.8.*",
     "laravel/tinker": "^1.0",
     "lavary/laravel-menu": "^1.7",
-    "rinvex/laravel-addresses": "^2.1",
+    "spatie/laravel-medialibrary": "^7.9",
     "srmklive/paypal": "^1.6"
   },
   "require-dev": {
