--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "hyn/multi-tenant": "^5.4",
     "igaster/laravel-theme": "^2.0",
     "kris/laravel-form-builder": "^1.20",
+    "laravel/cashier": "^9.3",
     "laravel/framework": "5.8.*",
     "laravel/tinker": "^1.0",
     "lavary/laravel-menu": "^1.7",
