--- a/composer.json
+++ b/composer.json
@@ -15,16 +15,17 @@
     "chelebi/laravel-fqdn-validator": "^1.0",
     "consoletvs/invoices": "^1.2",
     "fideloper/proxy": "^4.0",
+    "greabock/tentacles": "^1.0",
     "hesto/multi-auth": "^2.0",
     "hyn/multi-tenant": "^5.4",
     "igaster/laravel-theme": "^2.0",
     "kris/laravel-form-builder": "^1.20",
-    "laravel/cashier": "^9.3",
+    "laravel/cashier": "^10.0",
     "laravel/framework": "5.8.*",
     "laravel/tinker": "^1.0",
     "lavary/laravel-menu": "^1.7",
-    "spatie/laravel-medialibrary": "^7.9",
-    "srmklive/paypal": "^1.6"
+    "nwidart/laravel-modules": "^5.0",
+    "spatie/laravel-medialibrary": "^7.9"
   },
   "require-dev": {
     "barryvdh/laravel-debugbar": "^3.2",
@@ -49,7 +50,8 @@
   },
   "autoload": {
     "psr-4": {
-      "App\\": "app/"
+      "App\\": "app/",
+      "Modules\\": "modules/"
     },
     "classmap": [
       "database/seeds",
